--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/marked": "^4.0.2",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "marked": "^4.0.12",
     "monaco-editor": "^0.32.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
