update style for editor

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
     "monaco-editor": "^0.32.1",
+    "monaco-vim": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
