--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/basic-setup": "^0.19.3",
     "@codemirror/commands": "^0.19.8",
     "@codemirror/lang-markdown": "^0.19.6",
     "@codemirror/theme-one-dark": "^0.19.1",
-    "@replit/codemirror-vim": "^0.19.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@replit/codemirror-vim": "^0.19.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/marked": "^4.0.2",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@uiw/react-codemirror": "^4.5.1",
-    "highlight.js": "^11.4.0",
-    "marked": "^4.0.12",
+    "@types/jest": "^27.5.2",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^16.18.12",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^1.0.18",
+    "@uiw/react-codemirror": "^4.19.9",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.2.12",
+    "monaco-editor": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,8 +52,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
