--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monaco-editor/react": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "highlight.js": "^11.7.0",
     "marked": "^4.2.12",
     "monaco-editor": "^0.35.0",
+    "monaco-vim": "^0.3.5",
     "prettier": "^2.8.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
